--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,10 @@
 </head>
 
 <body>
+    <div id="root"></div>
     <script src="https://cdn.bootcss.com/lodash.js/4.17.10/lodash.min.js"></script>
+    <script src="https://cdn.bootcss.com/react/15.6.1/react.min.js"></script>
+    <script src="https://cdn.bootcss.com/react/15.6.1/react-dom.min.js"></script>
 </body>
 
 </html>
