--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>首页</title>
+    <link href="https://cdn.bootcss.com/antd/3.5.0/antd.min.css" rel="stylesheet">
 </head>
 
 <body>
