--- a/src/index.html
+++ b/src/index.html
@@ -6,12 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>首页</title>
+    <link href="https://cdn.bootcss.com/antd/3.5.0/antd.min.css" rel="stylesheet">
 </head>
 
 <body>
     <div id="root"></div>
     <script src="https://cdn.bootcss.com/react/15.6.1/react.min.js"></script>
     <script src="https://cdn.bootcss.com/react/15.6.1/react-dom.min.js"></script>
+    <script src="https://cdn.bootcss.com/moment.js/2.22.1/moment.min.js"></script>
+    <script src="https://cdn.bootcss.com/antd/3.5.0/antd.min.js"></script>
 </body>
 
 </html>
