--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,7 @@
     <script src="https://cdn.bootcss.com/react/15.6.1/react-dom.min.js"></script>
     <script src="https://cdn.bootcss.com/moment.js/2.22.1/moment.min.js"></script>
     <script src="https://cdn.bootcss.com/antd/3.5.0/antd.min.js"></script>
+    <script src="https://cdn.bootcss.com/antd/3.5.0/antd-with-locales.min.js"></script>
 </body>
 
 </html>
